fix format evg.md + fix transition .collapse-section

--- a/docs/stylesheets/collapse_section.css
+++ b/docs/stylesheets/collapse_section.css
@@ -3,12 +3,14 @@
     /* border: 1px solid #e0e0e0; */
     border-radius: 8px;
     /* overflow: hidden; */
-    transition: max-height 0.1s ease;
+    transition: box-shadow 0.3s ease-in-out;
+    box-shadow: 0 0 0 rgba(0, 0, 0, 0);
 }
 .collapse-section:hover {
 
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    transition-duration: 0.3s ease-in-out;
+    transition: box-shadow 0.2s ease-in-out;
+   
    
   }
 
